--- a/estilo.css
+++ b/estilo.css
@@ -1,107 +1,133 @@
-header, nav, section, article, aside, footer {
-	display: block;
-}
+<!DOCTYPE html>
 
-body {
-     margin: 100px 40px 10px 70px;
-}
+<html>
+<head>
+    <title>Educación y Áreas Verdes</title>
+	<meta http-equiv="Content-Type" content="text/html"; charset="UTF-8"/>
+    <link href="estilo.css" rel="stylesheet">
+    <script src="jquery.js" type="text/javascript"></script>
+</head>
 
-p {
-  margin: 5px 50px 5px 50px;
-  border: 1px solid green;
-  font-size: 12px;
-  color: #393B0B;
-}
+<body>
+    <header>
+        <hgroup>
+            <h1>ECOEDU</h1>
+            <h2>Plataforma para clases de reforzamiento al aire libre</h2>
+        </hgroup>
+        <div id="icono">
+            <img src="icono.jpg" WIDTH=100 y HEIGHT=100 />
+        </div>
+    </header>
 
-h1, h2, h3  {
-   	    color: #B43104;
-            font-family: arial, georgia, courier;
-   	    background: #F8E0E0;
-            padding: 20px 20px 20px 80px;
-            border: thin solid orange;
-}
+    <nav>
+        <ul class="menu">
+            <li><a href="#resumen">Presentación de la Aplicación</a></li>
+            <li><a href="#entrada">Inicio y Autenticación</a></li>
+            <li><a href="#contacto">Formulario de contacto</a></li>
+        </ul>
+    </nav>
 
-h1 {
-   font-weight: bold;
-   font-size: 30px;
-}
+    <aside>
+        <h1>Menú</h1>
+        <ul>
+            <li><a href="#entrada">Inicio y Autenticación</a></li>
+            <li>Área Apoderados</li>
+            <li>Área docente</li>
+            <li>Área convenios</li>
+            <ul>
+		<li><a href="https://www.mineduc.cl/">Ministerio de Educación</a>
+		<li><a href="https://www.unicef.org/es">UNICEF</a>
+		<li><a href="http://www.meteochile.gob.cl/PortalDMC-web/index.xhtml">Pronostico del clima</a>
+            </ul>
+        </ul>
+    </aside>
 
-h2{
-  font-style: italic;
-  font-size: 20px;
-}
+    <section>
+	<a name="resumen"><h3>Necesidad a satisfacer</h3></a>
+        <p>Niños y jóvenes se han visto afectados  en su proceso educativo debido a la pandemia; las actividades físicas que regularmente los ayudaba a sentirse más activos están limitadas.</p>
+        <p>Por lo menos 1 de cada 7 niños y adolescentes han estado confinados en el hogar el último año, lo que supone un riesgo para su salud mental y bienestar (Dato extraído de UNICEF)</p>
+		<p>Existe limitación en los aforos y en las distancias de desplazamiento por ello el uso de los medios de comunicación digital para poner en contacto profesores y estudiantes se ha vuelto fundamental.</p>
+		<p>Los alumnos con clases online, no están aprendiendo de manera adecuada, ya sea por la infraestructura de los colegios o las limitaciones en el hogar para el acceso a Internet.</p>
+    </section>
+    <section>
+	<h3>Presentación del producto que resuelve la necesidad</h3>
+        <p>Sistema que permite el contacto entre usuarios (niños y adolescentes) que demandan clases y actividades deportivas y recreativas con profesores que están disponibles para actuar como monitores de estas actividades. Dentro de una zona geográfica definida y con la limitación de aforos.</p>
+        <p>Sistema de asignación de cupos y elección de usuarios para ocupar estos cupos según orden de llegada y con las limitaciones de aforo.</p>
+    </section>
+    <section>
+	<h3>Nombre de la aplicación:</h3>
+        <p>Plataforma para reforzamiento al aire libre.(ECOEDU).</p>
+    </section>
+    <section>
+	<h3>Objetivos:</h3>
+        <p>Apoyar a profesionales que se encuentren cesantes producto de la pandemia, ofreciendo sus servicios de clases a grupos de niños de edades similares.</p>
+        <p>Incentivar a los niños a trabajar al aire libre, brindándoles un espacio recreativo donde poder trabajar.</p>
+        <p>Apoyar a los padres y apoderados con sus hijos en el sentido académico, al poder elegir las materias para reforzar.</p>
+        <p>Con Geo referencia saber donde están nuestros hijos al momento de las clases.</p>
+		<p>Promover el desarrollo educativo y deportivo en jóvenes y niños.</p>
+		<p>Aprovechamiento de plazas o parques públicos comunales para estos eventos.</p>
+    </section>
+	<section>
+	<h3>Metodología:</h3>
+        <p>Investigación del posible segmento del mercado, cuales son los problemas o necesidades que podría satisfacer la aplicación que se proyecta desarrollar, existe en el mercado algún producto similar.</p>
+        <p>Potenciales usuarios o clientes, nuestro Bayer Persona, cuáles son sus intereses y como mejorar su vida nuestro producto.</p>
+        <p>Producto mínimo viable o PMV, usando la aplicación Balsamiq se construye un wireframe que mediante testeo se irá mejorando hasta lograr un producto estable.</p>
+        <p>Prototipo funcional a partir del wireframe para ser presentado a los primeros clientes para conocer su experiencia.</p>
+		<p>Testeo del prototipo y por realimentación validar hasta lograr un primer producto completo.</p>
+    </section>
+		<article class="login">
+            <header>
+                <a name="entrada"><h1>Registro y Autenticación</h1></a>
+            </header>
+            <section>
+				<form action="#">
+					<table border='2'>
+                    <tr>
+                        <td align="left">Email :</td>
+                        <td><input type="email" name="email" value="" required/></td>
+                    </tr>
+                    <tr>
+                        <td align="left">Contraseña :</td>
+                        <td><input type="hidden" name="password" value="" required/></td>
+                    </tr>
+                    <tr>
+                        <td><input type="submit" value="Iniciar Sesión"></td>
+                    </tr>		    
+					</table>
+				</form>
+            </section>
+        </article>
+        <article class="datos">
+            <header>
+                <a name="contacto"><h1>Datos para contacto</h1></a>
+            </header>
+	    <section>
+		<form action="correo.php" method="post">
+                <table border='2'>
+                    <tr>
+                        <td align="left">Nombre :</td>
+                        <td><input type="text" name="nombre" value="" required/></td>
+                    </tr>
+                    <tr>
+                        <td align="left">Email :</td>
+                        <td><input type="email" name="email" value="" required/></td>
+                    </tr>
+                    <tr>
+                        <td align="left">Mensaje :</td>
+                        <td><input type="text" name="mensaje" value="" required/></td>
+                    </tr>
+                    <tr>
+                        <td><input type="submit" value="Enviar"></td>
+                        <td><input type="reset" value="Borrar"></td>
+                    </tr>		    
+                </table>
+		</form>
+            </section>
+        </article>
 
-h3{
-  font-style: italic;
-  font-size: 15px;
-}
+    <footer>
+        2021 EcoEdu    
+    </footer>
+</body>
+</html>
 
-header {
-	background-color: #F5A9A9;
-}
-
-nav {
-	background-color: #F7BE81;
-}
-
-aside {
-	float:left;
-        height: 1000px;
-	width:20%;
-	background-color: #F5DA81;
-}
-
-section {
-	float:right;
-	width:80%;
-	background-color: #BDBDBD;
-}
-
-article.dibujos {
-	background-color: #C8FE2E;
-        clear:both;
-
-}
-
-article.datos {
-	background-color: #C8FE2E;
-        clear:both;
-	float:right;
-	width:80%;
-}
-
-footer {
-	clear:both;
-	background-color: #F79F81;
-}
-
-canvas {
-       border: 1px solid red;
-}	
-
-ul.menu {
-	background: #F4F4F4;
-	border: 1px solid #7C7C7C;
- 	list-style: none;
-  	margin: 0;
-  	padding: 0;
-  	overflow: hidden;
-}
-
-ul.menu li {
-	   float:left;
-	   width:33%;
-}
-
-ul.menu li a {
-	     border-left: 1px solid #FFF;
-  	     border-right: 1px solid #7C7C7C;
-             color: #333;
-             display: block;
-             padding: .3em;
-             text-decoration: none;
-}
-
-#icono {
-       float:right;
-}
